# base-branch-watch

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  pyproject.toml
.planning/: PROJECT.md
base_branch_watch/: __init__.py  __main__.py  cli.py  hook.py  pyproject.toml
base_branch_watch/app/: __init__.py  menu_builder.py  menubar.py
base_branch_watch/core/: __init__.py  config.py  git_ops.py  hook_summary.py  log.py  models.py  pr_status.py  state.py
base_branch_watch/notify/: base.py  osascript_notifier.py
base_branch_watch/runner/: batch.py
scripts/: com.armaan.base-branch-watch.plist.template  install-launchagent.sh  install-pre-push-hook.sh  pre-push-hook.sh.template
tests/: conftest.py  test_hook.py  test_hook_install.py  test_launchagent_install.py
tests/app/: test_menu_builder.py  test_menubar.py
tests/core/: test_config.py  test_git_ops.py  test_hook_git_ops.py  test_hook_summary.py  test_log.py  test_pr_status.py  test_state.py
tests/notify/: test_osascript_notifier.py
tests/runner/: test_batch.py
